<resources>
    <string name="app_name">ShazMe!</string>
    <string name="action_settings">Settings</string>
    <string name="lblSignIn">Entra a tu cuenta de ShazMe!</string>
    <string name="mnuBtnSignOut">Cerrar Sesión...</string>
    <string name="txtMatching">Hacer match</string>
    <string name="btnAddCancion">Añadir Canción</string>
    <string name="lblAppLogo">App Logo</string>
    <string name="lblEmail">Email</string>
    <string name="lblContrasena">Contraseña</string>
    <string name="lblLoginAlternativo">O entra con tu cuenta de Google</string>
    <string name="btnEntrar">Entrar</string>
    <string name="lblHeOlvidadoContrasena">He olvidado mi contraseña...</string>
    <string name="lblBienvenida">Identifica una canción...</string>
    <string name="lblAniadir">...o ayuda a aumentar el listado de canciones...</string>
    <string name="lblNombre">Nombre de la canción:</string>
    <string name="lblArtista">Artista:</string>
    <string name="btnEnviar">Enviar </string>
</resources>
